syntax = "proto3";

package greet;

message Greeting {
	string first_name = 1;
	string last_name = 2;
}

message GreetingRequest {
	Greeting greeting = 1;
}

message GreetingResponse {
	string result = 1;
}

message GreetManyTimesRequest {
	Greeting greeting = 1;
}

message GreetManyTimesResponse {
	string result = 1;
}

message LongGreetRequest {
	Greeting greeting = 1;
}

message LongGreetResponse {
	string result = 1;
}

message GreetEveryoneRequest {
	Greeting greeting = 1;
}

message GreetEveryoneResponse {
	string result = 1;
}

service GreetingService {
	// Unary
	rpc Greet (GreetingRequest) returns (GreetingResponse) {}

	// Server streaming
	rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {}

	// Client streaming
	rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {}

	// Bidi streaming
	rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {}
}